# Open-Wrt-RTK

OLD.git/: config  index  packed-refs
OLD.git/logs/: HEAD
OLD.git/objects/pack/: pack-1e6b91589eb3b081cd36cb6fb129ceb83053e91e.idx
OLD.git/refs/heads/: master
rtk_openwrt_src/: .config
rtk_openwrt_src/build_dir/host/autoconf-2.68/: Makefile  config.status
rtk_openwrt_src/build_dir/host/automake-1.11.6/: Makefile  config.status
rtk_openwrt_src/build_dir/host/bc-1.06.95/: Makefile  config.status
rtk_openwrt_src/build_dir/host/bison-3.0.2/: Makefile  config.status  javacomp.sh
rtk_openwrt_src/build_dir/host/cmake-2.8.12.2/: CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
rtk_openwrt_src/build_dir/host/findutils-4.4.2/: Makefile  config.h  config.status
rtk_openwrt_src/build_dir/host/flex-2.5.39/: Makefile  Makefile.in  config.h  config.status  libfl.la  libfl_pic.la  libtool
rtk_openwrt_src/build_dir/host/flock/: flock
rtk_openwrt_src/build_dir/host/genext2fs-1.4.1/: Makefile  config.status  genext2fs
rtk_openwrt_src/build_dir/host/ipkg-utils-1.7/: ipkg-compare-versions
rtk_openwrt_src/build_dir/host/libtool-2.4/: Makefile  config.status  libtool
rtk_openwrt_src/build_dir/host/m4-1.4.17/: Makefile  config.status  stamp-h
rtk_openwrt_src/build_dir/host/mklibs-0.1.35/: Makefile  config.guess  config.rpath  config.status  config.sub  depcomp  install-sh  missing
rtk_openwrt_src/build_dir/host/mm-common-0.9.6/: Makefile  config.status
rtk_openwrt_src/build_dir/host/mtd-utils-1.4.5/: ubinize
rtk_openwrt_src/build_dir/host/patch-2.7.1/: Makefile  config.h  config.status
rtk_openwrt_src/build_dir/host/patch-image/: patch-cmdline  patch-dtb
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/fstools-2014-06-22/: CMakeLists.txt  block.c  jffs2reset.c  mount_root.c  snapshot.c  ubi.c
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/fstools-2014-06-22/ipkg-realtek/fstools/CONTROL/: control
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/fstools-2014-06-22/libblkid-tiny/: bitops.h  blkid.h  blkidP.h  ext.c  hfs.c  libblkid-tiny.c  libblkid-tiny.h  mkdev.c  squashfs.c  superblocks.h  swap.c  vfat.c
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/fstools-2014-06-22/libfstools/: extroot.c  find.c  jffs2.c  libfstools.h  mount.c  mtd.c  overlay.c  snapshot.c  ubi.c  volume.c  volume.h
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/fstools-2014-06-22/libubi/: libubi.c
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/jsonfilter-2014-06-19/: CMakeLists.txt  ast.c  ast.h  lexer.c  lexer.h  main.c  matcher.c  matcher.h  parser.out  parser.y
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/jsonfilter-2014-06-19/contrib/: lemon
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/procd-2014-09-15/: CMakeLists.txt  inittab.c  log.h  procd.c  procd.h  rcS.c  rcS.h  signal.c  state.c  system.c  ubus.c  watchdog.c  watchdog.h
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/procd-2014-09-15/initd/: early.c  init.c  init.h  mkdev.c  preinit.c
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/procd-2014-09-15/plug/: coldplug.c  hotplug.c  hotplug.h  udevtrigger.c
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/procd-2014-09-15/service/: instance.c  instance.h  service.c  service.h  trigger.c  validate.c  watch.c
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/procd-2014-09-15/upgraded/: CMakeLists.txt  upgraded  upgraded.c
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/procd-2014-09-15/utils/: askfirst.c  utils.c  utils.h
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/ubox-2014-09-16/: CMakeLists.txt  board.c  kmodloader.c  lsbloader.c
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/ubox-2014-09-16/ipkg-realtek/ubox/CONTROL/: control
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/ubox-2014-09-16/log/: logd.c  logread.c  syslog.c  syslog.h
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/ubox-2014-09-16/validate/: cli.c  libvalidate.h  validate.c
rtk_openwrt_src/build_dir/target-mips-rlx4181-linux/ustream-ssl-cyassl/ustream-ssl-2014-03-25/: .gitignore  CMakeLists.txt  example.crt  example.key  ustream-example-client.c  ustream-example-server.c  ustream-internal.h  ustream-io-cyassl.c  ustream-io-openssl.c  ustream-openssl.c  ustream-openssl.h  ustream-polarssl.c  ustream-polarssl.h  ustream-ssl.c
rtk_openwrt_src/dl/: ath10k-firmware-38eeda3ae6f90fde5546bdd48ee4ff3090f238c0.tar.bz2  hostapd-2014-06-03.1.tar.bz2
rtk_openwrt_src/feeds/luci.tmp/: .packageinfo
rtk_openwrt_src/feeds/management.tmp/: .packageinfo
rtk_openwrt_src/feeds/oldpackages.tmp/: .packageinfo
rtk_openwrt_src/feeds/packages.tmp/: .packageinfo
rtk_openwrt_src/feeds/routing.tmp/: .packageinfo
rtk_openwrt_src/feeds/telephony.tmp/: .packageinfo
rtk_openwrt_src/tmp/: .config-package.in  .config-target.in  .kconfig-realtek_rtl8196e  .kconfig-realtek_rtl819xd  .kconfig-realtek_rtl8881a  .kconfig-rtkmips_rtl8198c  .packagedeps  .packagefeeds  .packageinfo  .targetinfo  a.out
rtk_openwrt_src/tmp/info/: .files-packageinfo-31410  .files-packageinfo.mk  .files-targetinfo-31410  .files-targetinfo.mk  .packageinfo-kernel_linux  .packageinfo-kernel_mac80211  .packageinfo-utils_bluez  .targetinfo-adm5120  .targetinfo-adm8668  .targetinfo-amazon  .targetinfo-ar7  .targetinfo-ar71xx  .targetinfo-at91  .targetinfo-atheros  .targetinfo-au1000  .targetinfo-avr32  .targetinfo-bcm53xx  .targetinfo-brcm2708  .targetinfo-brcm47xx  .targetinfo-brcm63xx  .targetinfo-cns21xx  .targetinfo-cns3xxx  .targetinfo-cobalt  .targetinfo-ep93xx  .targetinfo-gemini  .targetinfo-imx6  .targetinfo-iop32x  .targetinfo-ixp4xx  .targetinfo-kirkwood  .targetinfo-lantiq  .targetinfo-malta  .targetinfo-mcs814x  .targetinfo-mpc52xx  .targetinfo-mpc83xx  .targetinfo-mpc85xx  .targetinfo-mvebu  .targetinfo-mxs  .targetinfo-octeon  .targetinfo-omap  .targetinfo-omap24xx  (+15 more)
(+4178 files in other folders)
